--- a/css/styleGuide.css
+++ b/css/styleGuide.css
@@ -26,8 +26,17 @@ nav.navbar, .navbar-default {
 .navbar-default .navbar-nav > li > a {
     color: white;
 }
-.navbar-default .navbar-nav .open .dropdown-menu>li>a {
-    color: white;
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: white;
+    }
+}
+
+@media (min-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: black;
+    }
 }
 
 .navbar-default .navbar-brand {
